<resources>
    <string name="app_name">SCC QRide App</string>
    <string name="title_scc">SCC</string>
    <string name="title_online_bus_ticket">Online Bus Ticket</string>
    <string name="label_email">Email</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="label_password">Password</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="btnlabel_sign_in">Sign in</string>
    <string name="forgot_password">I forgot my Password</string>
    <string name="register_account">Register Account</string>
    <string name="label_edp">EDP</string>
    <string name="hint_enter_edp">Enter EDP</string>
    <string name="btnlabel_register">Register</string>
    <string name="btnlabel_backtosignin">Back to Login</string>
    <string name="label_registered_successfully">Registered Successfully!</string>
    <string name="user_name">USER\'S FULL NAME</string>
    <string name="user_edp">EDP NUMBER</string>
    <string name="token_balance">TOKEN BALANCE</string>
    <string name="balance">₱130.00</string>
    <string name="send_token">Send Token</string>
    <string name="send_to">Send to</string>
    <string name="label_amount">Amount</string>
    <string name="scan_upload_qr">Scan/Upload QR</string>
    <string name="label_message">Message</string>
    <string name="hint_message">(Optional)</string>
    <string name="btnlabel_sendtoken">Next</string>
    <string name="sendtoken_recipient_name">Aldrin Tanuan</string>
    <string name="label_token">Token</string>
    <string name="label_balance">130.00</string>
    <string name="label_aboutsend">You\'re about to send</string>
    <string name="label_sendamount">15.00</string>
    <string name="label_amounttopay">Total amount to pay</string>
    <string name="amount_send">₱15.00</string>
    <string name="label_sent">Successfully Sent</string>
    <string name="label_new_balance">115.00</string>
    <string name="btnlabel_back_to_dashboard">Back to Dashboard</string>
    <string name="navlabel_busticket">Bus Ticket</string>
    <string name="navlabel_history">History</string>
    <string name="navlabel_home">Home</string>
    <string name="navlabel_scanqr">Scan QR</string>
    <string name="navlabel_sendtoken">Send Token</string>
    <string name="navlabel_profile">Profile</string>
</resources>