<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SendTokenReceipt">

    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="310dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/img_check"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/fontcolor"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:text="@string/label_sent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="123dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendtoken_recipient_name"
                android:textAlignment="center"
                android:textColor="@color/fontcolor"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_edp"
                android:textAlignment="center"
                android:textColor="@color/fontcolor"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="160dp"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_token"
                android:textAlignment="textStart"
                android:textColor="@color/fontcolor"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_new_balance"
                android:textAlignment="textEnd"
                android:textColor="@color/fontcolor"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="260dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="240dp"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_amounttopay"
                android:textAlignment="textStart"
                android:textColor="@color/fontcolor"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount_send"
                android:textAlignment="textEnd"
                android:textColor="@color/fontcolor"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952">

        <FrameLayout
            android:layout_width="330dp"
            android:layout_height="73dp"
            android:background="@drawable/gradient"
            tools:ignore="TextSizeCheck">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:letterSpacing=".2"
                android:text="@string/btnlabel_back_to_dashboard"
                android:textSize="22sp"
                tools:ignore="VisualLintButtonSize" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>