<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SendTokenConfirmation">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06">

        <FrameLayout
            android:id="@+id/topup_frame"
            android:layout_width="330dp"
            android:layout_height="73dp"
            android:background="@drawable/gradient">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/backbtn"
                    android:layout_width="53dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@color/transparent"
                    android:drawableLeft="@drawable/ic_back"
                    android:minHeight="48dp"
                    tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/send_token"
                    android:letterSpacing=".2"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="330dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="123dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendtoken_recipient_name"
                android:textAlignment="center"
                android:textColor="@color/fontcolor"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_edp"
                android:textAlignment="center"
                android:textColor="@color/fontcolor"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_token"
                android:textAlignment="textStart"
                android:textColor="@color/fontcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_balance"
                android:textAlignment="textEnd"
                android:textColor="@color/fontcolor"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="190dp"
            android:text="@string/label_aboutsend"
            android:textColor="@color/fontcolor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="230dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_amount"
                android:textAlignment="textStart"
                android:textColor="@color/fontcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_sendamount"
                android:textAlignment="textEnd"
                android:textColor="@color/fontcolor"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="260dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="320dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_amounttopay"
                android:textAlignment="textStart"
                android:textColor="@color/fontcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount_send"
                android:textAlignment="textEnd"
                android:textColor="@color/fontcolor"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952">

        <FrameLayout
            android:layout_width="330dp"
            android:layout_height="73dp"
            android:background="@drawable/gradient" >


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="I Confirm"
                android:letterSpacing=".2"
                android:textSize="24sp"
                android:background="@color/transparent"/>
        </FrameLayout>


    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/fontcolor"
        android:textColor="@color/fontcolor"
        android:text="I confirm that the details are correct."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827" />

</androidx.constraintlayout.widget.ConstraintLayout>