<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgroundd"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="133dp"
        android:elevation="10dp"
        android:importantForAccessibility="no"
        android:src="@drawable/scc_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_scc"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title_online_bus_ticket"
            android:textColor="@color/black"
            android:textSize="32sp"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="330dp"
        android:layout_height="385dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
        tools:ignore="TextSizeCheck">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                app:cardBackgroundColor="#eaeaea"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="282dp"
                    android:layout_height="48dp"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:hint="@string/hint_enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#B3B3B3"
                    tools:ignore="Autofill,RtlSymmetry" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:background="@color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_edp"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                app:cardBackgroundColor="#eaeaea"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp">

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="282dp"
                    android:layout_height="48dp"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:hint="@string/hint_enter_edp"
                    android:inputType="number"
                    android:paddingStart="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#B3B3B3"
                    tools:ignore="Autofill,RtlSymmetry" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="210dp"
            android:background="@color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                app:cardBackgroundColor="#eaeaea"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp">

                <EditText
                    android:id="@+id/editTextText3"
                    android:layout_width="282dp"
                    android:layout_height="48dp"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:hint="@string/hint_enter_password"
                    android:textColor="@color/black"
                    android:textColorHint="#B3B3B3"
                    tools:ignore="Autofill,RtlSymmetry" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient">

                <Button
                    android:id="@+id/button"
                    android:layout_width="282dp"
                    android:layout_height="48dp"
                    android:background="@color/transparent"
                    android:text="@string/btnlabel_register"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>